Fix cases layout on small screens

--- a/src/scss/templates/cases.scss
+++ b/src/scss/templates/cases.scss
@@ -7,6 +7,8 @@
 }
 
 .cases-grid > * {
+  width: 100%;
+
   @include mq(from s) {
     width: 50%;
   }
